--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
                     <img src="resources/Rectangle 5.png" alt="">
                 </div>
             </div>
+            <div class="card">
+                <div class="container-card">
+                    <div class="card-picture">
+                        <img src="resources/Rectangle 6.png" alt="">
+                    </div>
+                </div>
+                <div class="card-picture">
+                    <img src="resources/Rectangle 7.png" alt="">
+                </div>
+                <div class="card-picture">
+                    <img src="resources/Rectangle 8.png" alt="">
+                </div>
+            </div>
         </section>
         <section class="subscribe">
             <div class="subscribe-image">
