--- a/index.html
+++ b/index.html
@@ -82,14 +82,20 @@
                 <p class="function-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
                     molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc<br>
                     purus quam id fermentum amet amet sit consectetur.</p>
-
         </section>
         <section>
-            <div class="border">
-
-            </div>
-            </div>
+            
         </section>
+        <div class="top">
+        <div class="fifth-percent">
+            <div class="fifth-percent-offer">
+                <img src="resources/Group 75.png" alt="">
+            </div>
+            <div class="fifth-percent-offer">
+                <img src="resources/Group 44.png" alt="">
+            </div>  
+        </div>
+    </div>
         <section>
             <div class="products-picture">
                 <h3 class="gifts">THE BEST GIFTS</h3>
